# tplink-sg1016-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
src/tplink_sg1016_mcp/: __main__.py  client.py  models.py  parsing.py  server.py
