[project]
name = "tplink-sg1016-mcp"
version = "0.1.0"
description = "MCP server for TP-Link SG1016PE Easy Smart switches"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fastmcp>=3.1.1",
    "json5>=0.13.0",
]

[project.scripts]
tplink-sg1016-mcp = "tplink_sg1016_mcp.__main__:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tplink_sg1016_mcp"]

[dependency-groups]
dev = [
    "pex>=2.91.4",
    "ruff>=0.15.7",
    "tox>=4.50.3",
    "tox-ini-fmt>=1.7.1",
    "tox-uv>=1.33.4",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]
